[package]
name = "shitbot"
version = "0.1.0"
authors = ["DuckSoft <realducksoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"
futures = "*"
tokio = { version="*", features=["macros", "io-util"]}
rusty_secrets = "*"
anyhow = "*"
hex = "*"